add_subdirectory(botlib)
add_subdirectory(game)
add_definitions(-D_CRT_SECURE_NO_WARNINGS -D_CRT_NONSTDC_NO_DEPRECATE)
set(AEONQUAKE_SOURCES
	client/cl_cgame.c
	client/cl_cin.c
	client/cl_console.c
	client/cl_input.c
	client/cl_keys.c
	client/cl_main.c
	client/cl_net_chan.c
	client/cl_parse.c
	client/cl_scrn.c
	client/cl_ui.c
	client/snd_adpcm.c
	client/snd_dma.c
	client/snd_mem.c
	client/snd_mix.c
	client/snd_wavelet.c
	qcommon/cm_load.c
	qcommon/cm_patch.c
	qcommon/cm_polylib.c
	qcommon/cm_test.c
	qcommon/cm_trace.c
	qcommon/cmd.c
	qcommon/common.c
	qcommon/cvar.c
	qcommon/files.c
	qcommon/huffman.c
	qcommon/md4.c
	qcommon/msg.c
	qcommon/net_chan.c
	qcommon/unzip.c
	qcommon/vm.c
	qcommon/vm_interpreted.c
	qcommon/vm_x86.c
	game/q_math.c
	game/q_shared.c
	server/sv_bot.c
	server/sv_ccmds.c
	server/sv_client.c
	server/sv_game.c
	server/sv_init.c
	server/sv_main.c
	server/sv_net_chan.c
	server/sv_snapshot.c
	server/sv_world.c
	win32/win_input.c
	win32/win_main.c
	win32/win_net.c
	win32/win_shared.c
	win32/win_snd.c
	win32/win_syscon.c
	win32/win_wndproc.c	
	game/bg_public.h
	cgame/cg_public.h
	client/client.h
	qcommon/cm_local.h
	qcommon/cm_patch.h
	qcommon/cm_polylib.h
	qcommon/cm_public.h
	game/g_public.h
	ui/keycodes.h
	client/keys.h
	game/q_shared.h
	qcommon/qcommon.h
	qcommon/qfiles.h
	renderer/qgl.h
	win32/resource.h
	server/server.h
	client/snd_local.h
	client/snd_public.h
	game/surfaceflags.h
	renderer/tr_local.h
	renderer/tr_public.h
	cgame/tr_types.h
	ui/ui_public.h
	qcommon/unzip.h
	qcommon/vm_local.h
	win32/win_local.h
	win32/qe3.ico
	win32/winquake.rc
)
add_executable(aeonquake WIN32 ${AEONQUAKE_SOURCES})
add_dependencies(aeonquake botlib qagamex86)
target_link_libraries(aeonquake botlib qagamex86 ${OPENGL_gl_LIBRARY} ${OPENGL_glu_LIBRARY} ws2_32 winmm)